[metadata]
name = chainlib-eth
version = 0.4.17
description = Ethereum implementation of the chainlib interface
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://git.defalslfy.org/chainlib-eth
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.7
packages = 
	chainlib.eth
	chainlib.eth.dialect
	chainlib.eth.runnable
	chainlib.eth.pytest
	chainlib.eth.unittest
	chainlib.eth.cli

[options.entry_points]
console_scripts =
	eth-count = chainlib.eth.runnable.count:main
	eth-balance = chainlib.eth.runnable.balance:main
	eth-checksum = chainlib.eth.runnable.checksum:main
	eth-gas = chainlib.eth.runnable.gas:main
	eth-raw = chainlib.eth.runnable.raw:main
	eth-get = chainlib.eth.runnable.get:main
	eth-decode = chainlib.eth.runnable.decode:main
	eth-encode = chainlib.eth.runnable.encode:main
	eth-info = chainlib.eth.runnable.info:main
	eth-nonce = chainlib.eth.runnable.count:main
	eth-wait = chainlib.eth.runnable.wait:main
	eth-block = chainlib.eth.runnable.block:main
